<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/hotJObs"
            android:icon="@drawable/jobs"
            android:title="Hot Jobs" />
        <item
            android:id="@+id/govtJobs"
            android:icon="@drawable/jobs"
            android:title="@string/govtJob" />
        <item
            android:id="@+id/bankJObs"
            android:icon="@drawable/jobs"
            android:title="@string/bankJob" />
        <item
            android:id="@+id/ngo"
            android:icon="@drawable/jobs"
            android:title="@string/ngoJob" />
        <item
            android:id="@+id/medicalJob"
            android:icon="@drawable/jobs"
            android:title="@string/medicalJob" />

        <item
            android:id="@+id/fullTimeJob"
            android:icon="@drawable/jobs"
            android:title="@string/fullTimeJob" />

        <item
            android:id="@+id/defenceJob"
            android:icon="@drawable/jobs"
            android:title="@string/defenceJob" />

    </group>

    <item android:title="Notice">
        <menu>

            <item
                android:id="@+id/ntrcaNotice"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/ntrcaNotice" />
            <item
                android:id="@+id/jobResult"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/jobResult" />
            <item
                android:id="@+id/jobNotice"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/jobNotice" />
        </menu>
    </item>

    <item android:title="More Apps">
        <menu>

            <item
                android:id="@+id/bdJobs"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/bdJobs" />
            <item
                android:id="@+id/bdResult"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/bdResult" />

        </menu>
    </item>


</menu>
